--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,700"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/asset/style.css" />
   </head>
   <body>
     <div class="overlay">
@@ -48,5 +48,5 @@
       </header>
     </div>
   </body>
-  <script src="index.js"></script>
+  <script src="/asset/index.js"></script>
 </html>
